--- a/popup.html
+++ b/popup.html
@@ -1,108 +1,110 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <style></style>
-  </head>
-  <body>
-    <div id='wrapper' class="white">
-        <div class="menu-side">
-            <ul>
-                <li id="todo" class='menu-side-button active'>
-                    <svg id="todo" enable-background="new 0 0 515.556 515.556" height="25" viewBox="0 0 515.556 515.556" width="25" xmlns="http://www.w3.org/2000/svg"><path d="m0 274.226 176.549 176.886 339.007-338.672-48.67-47.997-290.337 290-128.553-128.552z"/></svg>                
-                </li>
-                <li id="lists"class='menu-side-button'>
-                    <svg width="25" height="25" version="1.1" id="lists" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 384 384" style="enable-background:new 0 0 384 384;" xml:space="preserve">
-                        <g>
-                            <g>
-                                <g>
-                                    <rect x="0" y="277.333" width="384" height="42.667"/>
-                                    <rect x="0" y="170.667" width="384" height="42.667"/>
-                                    <rect x="0" y="64" width="384" height="42.667"/>
-                                </g>
-                            </g>
-                        </g>
-                    </svg>
-                </li>
-                <li id="settings" class='menu-side-button'>
-                    <svg id="settings" enable-background="new 0 0 24 24" height="25" viewBox="0 0 24 24" width="25" xmlns="http://www.w3.org/2000/svg"><path d="m22.683 9.394-1.88-.239c-.155-.477-.346-.937-.569-1.374l1.161-1.495c.47-.605.415-1.459-.122-1.979l-1.575-1.575c-.525-.542-1.379-.596-1.985-.127l-1.493 1.161c-.437-.223-.897-.414-1.375-.569l-.239-1.877c-.09-.753-.729-1.32-1.486-1.32h-2.24c-.757 0-1.396.567-1.486 1.317l-.239 1.88c-.478.155-.938.345-1.375.569l-1.494-1.161c-.604-.469-1.458-.415-1.979.122l-1.575 1.574c-.542.526-.597 1.38-.127 1.986l1.161 1.494c-.224.437-.414.897-.569 1.374l-1.877.239c-.753.09-1.32.729-1.32 1.486v2.24c0 .757.567 1.396 1.317 1.486l1.88.239c.155.477.346.937.569 1.374l-1.161 1.495c-.47.605-.415 1.459.122 1.979l1.575 1.575c.526.541 1.379.595 1.985.126l1.494-1.161c.437.224.897.415 1.374.569l.239 1.876c.09.755.729 1.322 1.486 1.322h2.24c.757 0 1.396-.567 1.486-1.317l.239-1.88c.477-.155.937-.346 1.374-.569l1.495 1.161c.605.47 1.459.415 1.979-.122l1.575-1.575c.542-.526.597-1.379.127-1.985l-1.161-1.494c.224-.437.415-.897.569-1.374l1.876-.239c.753-.09 1.32-.729 1.32-1.486v-2.24c.001-.757-.566-1.396-1.316-1.486zm-10.683 7.606c-2.757 0-5-2.243-5-5s2.243-5 5-5 5 2.243 5 5-2.243 5-5 5z"/></svg>
-                </li>
-            </ul>
-        </div>
-        <h1>finish.it</h1>
-        <div class="tab" id="todo-tab">
-            <ul>
-
-            </ul>
-            <div class='form-input' id="add-tasks">
-                <input class="add-task-input" type="text" placeholder="Text Mom at 4pm">
-                <button class="add-task-button" type="submit">Add</button>
-            </div>
-        </div>
-        <div class="tab hidden" id="lists-tab">
-            <ul>
-                
-            </ul>
-            <div>
-                <button class="add-bl" type="submit">Add current page</button>
-            </div>
-            <div id="working-time">
-                <h3>Working time</h3>
-                <select id="start-day">
-                    <option value="mon">
-                        Monday
-                    </option>
-                    <option value="tue">
-                        Tuesday
-                    </option>
-                    <option value="wed">
-                        Wednesday
-                    </option>
-                    <option value="thu">
-                        Thursday
-                    </option>
-                    <option value="fri">
-                        Friday
-                    </option>
-                    <option value="sat">
-                        Saturday
-                    </option>
-                    <option value="sun">
-                        Sunday
-                    </option>
-                </select>
-                <label>to</label>
-                <select id="end-day">
-                    <option value="mon">
-                        Monday
-                    </option>
-                    <option value="tue">
-                        Tuesday
-                    </option>
-                    <option value="wed">
-                        Wednesday
-                    </option>
-                    <option value="thu">
-                        Thursday
-                    </option>
-                    <option selected value="fri">
-                        Friday
-                    </option>
-                    <option value="sat">
-                        Saturday
-                    </option>
-                    <option value="sun">
-                        Sunday
-                    </option>
-                </select>
-                <input value="09:00" type="time">
-                <label>to</label>
-                <input value="17:00" type="time">
-            </div>
-        </div>
-    </div>
-  </body>
-  <script src="assets/scripts/jquery.js"></script>
-  <script src="assets/scripts/main.js"></script>
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<style></style>
+	</head>
+	<body>
+		<div id="wrapper" class="white">
+			<div class="menu-side">
+				<ul>
+					<li id="todo" class="menu-side-button active">
+						<svg
+							id="todo"
+							enable-background="new 0 0 515.556 515.556"
+							height="25"
+							viewBox="0 0 515.556 515.556"
+							width="25"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path d="m0 274.226 176.549 176.886 339.007-338.672-48.67-47.997-290.337 290-128.553-128.552z" />
+						</svg>
+					</li>
+					<li id="lists" class="menu-side-button">
+						<svg
+							width="25"
+							height="25"
+							version="1.1"
+							id="lists"
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+							x="0px"
+							y="0px"
+							viewBox="0 0 384 384"
+							style="enable-background: new 0 0 384 384"
+							xml:space="preserve"
+						>
+							<g>
+								<g>
+									<g>
+										<rect x="0" y="277.333" width="384" height="42.667" />
+										<rect x="0" y="170.667" width="384" height="42.667" />
+										<rect x="0" y="64" width="384" height="42.667" />
+									</g>
+								</g>
+							</g>
+						</svg>
+					</li>
+					<li id="settings" class="menu-side-button">
+						<svg
+							id="settings"
+							enable-background="new 0 0 24 24"
+							height="25"
+							viewBox="0 0 24 24"
+							width="25"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path
+								d="m22.683 9.394-1.88-.239c-.155-.477-.346-.937-.569-1.374l1.161-1.495c.47-.605.415-1.459-.122-1.979l-1.575-1.575c-.525-.542-1.379-.596-1.985-.127l-1.493 1.161c-.437-.223-.897-.414-1.375-.569l-.239-1.877c-.09-.753-.729-1.32-1.486-1.32h-2.24c-.757 0-1.396.567-1.486 1.317l-.239 1.88c-.478.155-.938.345-1.375.569l-1.494-1.161c-.604-.469-1.458-.415-1.979.122l-1.575 1.574c-.542.526-.597 1.38-.127 1.986l1.161 1.494c-.224.437-.414.897-.569 1.374l-1.877.239c-.753.09-1.32.729-1.32 1.486v2.24c0 .757.567 1.396 1.317 1.486l1.88.239c.155.477.346.937.569 1.374l-1.161 1.495c-.47.605-.415 1.459.122 1.979l1.575 1.575c.526.541 1.379.595 1.985.126l1.494-1.161c.437.224.897.415 1.374.569l.239 1.876c.09.755.729 1.322 1.486 1.322h2.24c.757 0 1.396-.567 1.486-1.317l.239-1.88c.477-.155.937-.346 1.374-.569l1.495 1.161c.605.47 1.459.415 1.979-.122l1.575-1.575c.542-.526.597-1.379.127-1.985l-1.161-1.494c.224-.437.415-.897.569-1.374l1.876-.239c.753-.09 1.32-.729 1.32-1.486v-2.24c.001-.757-.566-1.396-1.316-1.486zm-10.683 7.606c-2.757 0-5-2.243-5-5s2.243-5 5-5 5 2.243 5 5-2.243 5-5 5z"
+							/>
+						</svg>
+					</li>
+				</ul>
+			</div>
+			<h1>finish.it</h1>
+			<div class="tab" id="todo-tab">
+				<ul></ul>
+				<div class="form-input" id="add-tasks">
+					<input class="add-task-input" type="text" placeholder="Text Mom at 4pm" />
+					<button class="add-task-button" type="submit">Add</button>
+				</div>
+			</div>
+			<div class="tab hidden" id="lists-tab">
+				<ul></ul>
+				<div>
+					<button class="add-bl" type="submit">Add current page</button>
+				</div>
+				<div id="working-time">
+					<h3>Working time</h3>
+					<select id="start-day">
+						<option value="1">Monday</option>
+						<option value="2">Tuesday</option>
+						<option value="3">Wednesday</option>
+						<option value="4">Thursday</option>
+						<option value="5">Friday</option>
+						<option value="6">Saturday</option>
+						<option value="0">Sunday</option>
+					</select>
+					<label>to</label>
+					<select id="end-day">
+						<option value="1">Monday</option>
+						<option value="2">Tuesday</option>
+						<option value="3">Wednesday</option>
+						<option value="4">Thursday</option>
+						<option selected value="5">Friday</option>
+						<option value="6">Saturday</option>
+						<option value="0">Sunday</option>
+					</select>
+					<input class="wh-from" value="09:00" type="time" />
+					<label>to</label>
+					<input class="wh-to" value="17:00" type="time" />
+					<div>
+						<button class="add-wh" type="submit">Set working hours</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+	<script src="assets/scripts/jquery.js"></script>
+	<script src="assets/scripts/main.js"></script>
 </html>
