--- a/popup.html
+++ b/popup.html
@@ -61,7 +61,10 @@
 					</li>
 				</ul>
 			</div>
-			<h1>finish.it</h1>
+			<div class="half"><h1></h1></div>
+			<div id="task-stats">
+				<span>test</span><br><span>test</span>
+			</div>
 			<div class="tab" id="todo-tab">
 				<ul></ul>
 				<div class="form-input" id="add-tasks">
