progress bar i inne duperele

--- a/popup.html
+++ b/popup.html
@@ -103,6 +103,10 @@
 					<input id="wh-to" class="working-time" value="17:00" type="time" />
 				</div>
 			</div>
+			<div id="progress">
+				<span>Today tasks:</span>
+				
+			</div>
 		</div>
 	</body>
 	<script src="assets/scripts/jquery.js"></script>
