--- a/popup.html
+++ b/popup.html
@@ -65,7 +65,7 @@
 			<div class="tab" id="todo-tab">
 				<ul></ul>
 				<div class="form-input" id="add-tasks">
-					<input class="add-task-input" type="text" placeholder="Text Mom at 4pm" />
+					<input class="add-task-input" type="text" placeholder="Text Mom at 4pm" autofocus="true" />
 					<button class="add-task-button" type="submit">Add</button>
 				</div>
 			</div>
