--- a/popup.html
+++ b/popup.html
@@ -63,13 +63,12 @@
 			</div>
 			<div class="half"><h1></h1></div>
 			<div id="task-stats">
-				<span>test</span><br><span>test</span>
+				
 			</div>
 			<div class="tab" id="todo-tab">
-				<ul></ul>
+				<ul id="tasks"></ul>
 				<div class="form-input" id="add-tasks">
-					<input class="add-task-input" type="text" placeholder="Text Mom at 4pm" autofocus="true" />
-					<button class="add-task-button" type="submit">Add</button>
+					<ul></ul>
 				</div>
 			</div>
 			<div class="tab hidden" id="lists-tab">
