--- a/popup.html
+++ b/popup.html
@@ -62,9 +62,7 @@
 				</ul>
 			</div>
 			<div class="half"><h1></h1></div>
-			<div id="task-stats">
-				<span>test</span><br><span>test</span>
-			</div>
+			<div id="task-stats"><span>test</span><br /><span>test</span></div>
 			<div class="tab" id="todo-tab">
 				<ul></ul>
 				<div class="form-input" id="add-tasks">
@@ -105,7 +103,6 @@
 			</div>
 			<div id="progress">
 				<span>Today tasks:</span>
-				
 			</div>
 		</div>
 	</body>
