--- a/popup.html
+++ b/popup.html
@@ -63,11 +63,9 @@
 			</div>
 			<div class="half"><h1></h1></div>
 
-			<div id="task-stats">
-				
-			</div>
+			<div id="task-stats"></div>
 
-			<div class="tab" id="todo-tab">
+			<div class="tab active" id="todo-tab">
 				<ul id="tasks"></ul>
 				<div class="form-input" id="add-tasks">
 					<ul></ul>
@@ -99,9 +97,9 @@
 						<option value="6">Saturday</option>
 						<option value="0">Sunday</option>
 					</select>
-					<input id="wh-from" class="working-time" value="09:00" type="time" />
+					<input id="wh-from" class="working-time" type="time" />
 					<label>to</label>
-					<input id="wh-to" class="working-time" value="17:00" type="time" />
+					<input id="wh-to" class="working-time" type="time" />
 				</div>
 			</div>
 			<div id="progress">
