--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css" />
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
 		<style></style>
 	</head>
 	<body>
@@ -62,12 +62,12 @@
 			<div class="tab hidden" id="lists-tab">
 				<ul id="blacklist-list"></ul>
 				<ul>
-					<li class="blacklisted new add-bl"><div>
-						Add current page</div>
+					<li class="blacklisted new add-bl">
+						<div>Add current page</div>
 						<div class="favicon">
-								<img alt="" src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/plus-512.png">
+							<img alt="" src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/plus-512.png" />
 						</div>
-					  </li>
+					</li>
 				</ul>
 				<div id="line"></div>
 				<div id="working-time">
@@ -88,16 +88,10 @@
 						<option value="4">Thursday</option>
 						<option selected value="5">Friday</option>
 						<option value="6">Saturday</option>
-						<option value="0">Sunday</option>
-<<<<<<< HEAD
-					</select>
-					<input id="wh-from" class="working-time" type="time" />
-					<label>to</label>
-=======
-					</select><Br>
+						<option value="0">Sunday</option></select
+					><br />
 					<input id="wh-from" class="working-time" type="time" />
 					<label>to </label>
->>>>>>> 6e0b455df97658dda904ad9f296511f46066cf3d
 					<input id="wh-to" class="working-time" type="time" />
 				</div>
 			</div>
